# spongebobs-corpse

./: .gitignore  README.md  analysis.py  compare_methods.py  compare_thresholds.py  contact_duration.py  offset.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
batch/: README.md  batch_analysis.py  comprehensive_summary_caption.txt  contact_duration_detailed.csv  contact_duration_summary.csv  data.csv  statistical_report.txt  summary_table_formatted.csv
batch/final/: runs_comparison_caption.txt
batch/outputs/: ANALYSIS_SUMMARY.txt  additional_statistics.txt  batch_analysis_plot_caption.txt  batch_cv_plot_caption.txt  batch_detailed.csv  batch_summary.csv  comprehensive_summary_caption.txt  manifest_expected.json  model_comparison.txt  model_parameters.csv  model_residuals.csv  pairwise_comparisons.csv  residual_plots_caption.txt  runs_comparison_caption.txt  statistical_report.txt  summary_table_formatted.csv
data/: dr lee go brr - 28mm.csv  dr lee go brr - 40mm.csv  dr lee go brr - 4mm.csv  dr lee go brr - 52mm.csv  spongebob's corpse.csv
docs/: README.md  analysis-methods.md  api-reference.md  api.md  data-format.md  examples.md  figures.md  getting-started.md  index.md  installation.md  methods.md  output-files.md  overview.md  quickstart.md  reproducibility.md  scripts.md  statistical-methods.md  troubleshooting.md
outputs/: .gitignore  method_comparison_40mm_run2.csv  thickness_summary.csv  threshold_comparison.csv
tests/: test_outputs_manifest.py  test_pipeline_smoke.py  test_regression.py
tools/: build_manifest.py  verify_outputs.py
(+52 files in other folders)
